spacing fixes in experience section

--- a/static/mediaqueries.css
+++ b/static/mediaqueries.css
@@ -43,6 +43,9 @@
     .about-containers {
         margin-top: 0;
     }
+    #experience {
+        margin-bottom: 5rem;
+    }
 }
 
 @media screen and (max-width: 600px) {
