--- a/static/styles.css
+++ b/static/styles.css
@@ -350,7 +350,7 @@ section {
 /* EXPERIENCE SECTION */
 #experience {
     position: relative;
-    margin-bottom: 15rem;
+    margin-bottom: 12rem;
 }
 
 .experience-sub-title {
